--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activities.HomeActivity">
+    tools:context=".ui.activities.HomeActivity"
+    android:id="@+id/fragment_container">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_homescreen1"
@@ -52,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/ib_calendar"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -60,7 +61,7 @@
             android:background="@null"/>
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/ib_chat"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -68,7 +69,7 @@
             android:background="@null"/>
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/ib_home"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -76,7 +77,7 @@
             android:background="@null"/>
 
         <ImageButton
-            android:id="@+id/imageButton4"
+            android:id="@+id/ib_group"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -84,7 +85,7 @@
             android:background="@null"/>
 
         <ImageButton
-            android:id="@+id/imageButton5"
+            android:id="@+id/ib_profile"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
