--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -80,7 +80,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_LoginTitle"
-        tools:srcCompat="@drawable/neighbors_icon" />
+        android:src="@drawable/neighbors_icon"/>
 
     <EditText
         android:id="@+id/editText_LoginPassword"
