--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,6 +10,15 @@
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp">
 
+    <!-- FrameLayout show homchatt -->
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/nav_bottom"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_homescreen1"
         android:layout_width="0dp"
@@ -65,7 +74,7 @@
             android:background="@null"/>
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/imageButtonChatt"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
