--- a/app/src/main/res/layout/item_group_chatt.xml
+++ b/app/src/main/res/layout/item_group_chatt.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:background="@drawable/group_item_background"
+    android:layout_marginBottom="3dp">
 
     <TextView
         android:id="@+id/groupNameTextView"
@@ -15,12 +17,13 @@
         android:text="@string/group_name"
         android:textSize="16sp"
         android:textStyle="bold" />
-    <ImageView
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/next_icon"
+    <ImageView
+        android:layout_width="55dp"
+        android:layout_height="57dp"
+        android:layout_gravity="end"
         android:padding="8dp"
-        android:layout_gravity="end"/>
+        android:src="@drawable/ic_next" />
+
 
 </LinearLayout>
