--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,109 +1,61 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activities.HomeActivity"
-    android:layout_marginTop="20dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp">
+    android:id="@+id/main_frame_layout">
 
-    <!-- FrameLayout show homchatt -->
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/nav_bottom"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_homescreen1"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="4dp"
-        android:background="@drawable/border1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/rv_homescreen2"
-        app:layout_constraintVertical_weight="1"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_homescreen2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="4dp"
-        android:background="@drawable/border1"
-        app:layout_constraintTop_toBottomOf="@id/rv_homescreen1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/rv_homescreen3"
-        app:layout_constraintVertical_weight="1"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_homescreen3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/border1"
-        app:layout_constraintTop_toBottomOf="@id/rv_homescreen2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/nav_bottom"
-        app:layout_constraintVertical_weight="1"/>
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation"/>
 
     <LinearLayout
-        android:id="@+id/nav_bottom"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_above="@id/bottom_navigation">
 
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="0dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_homescreen1"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:src="@drawable/calendar_month"
-            android:background="@null"/>
+            android:layout_margin="4dp"
+            android:background="@drawable/border1"/>
 
-        <ImageButton
-            android:id="@+id/imageButtonChatt"
-            android:layout_width="0dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_homescreen2"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:src="@drawable/chat_icon"
-            android:background="@null"/>
+            android:layout_margin="4dp"
+            android:background="@drawable/border1"/>
 
-        <ImageButton
-            android:id="@+id/imageButton3"
-            android:layout_width="0dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_homescreen3"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:src="@drawable/home_icon"
-            android:background="@null"/>
-
-        <ImageButton
-            android:id="@+id/imageButton4"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:src="@drawable/groups_icon"
-            android:background="@null"/>
-
-        <ImageButton
-            android:id="@+id/imageButton5"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:src="@drawable/person_icon"
-            android:background="@null"/>
+            android:layout_margin="4dp"
+            android:background="@drawable/border1"/>
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.divider.MaterialDivider
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_above="@id/bottom_navigation"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/powder"
+        app:menu="@menu/bottom_navigation"/>
+</RelativeLayout>
