--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Grannar" parent="Theme.Material3.DayNight.NoActionBar">
+
+        <item name="colorPrimary">@color/green</item>
+
+        <item name="android:statusBarColor">?attr/colorPrimary</item>
+
+        <item name="android:windowBackground">@color/powder</item>
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
