--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -13,7 +13,9 @@ android:orientation="vertical">
         android:orientation="horizontal"
         android:padding="16dp"
         android:gravity="start"
-        android:layout_marginBottom="7dp">
+        android:layout_marginBottom="7dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/border">
 
         <!-- TextView for Group Name (to the right of image) -->
         <de.hdodenhof.circleimageview.CircleImageView
@@ -21,7 +23,8 @@ android:orientation="vertical">
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="12dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:srcCompat="@tools:sample/avatars"
+            tools:ignore="MissingClass" />
 
         <TextView
             android:id="@+id/groupName"
