--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
     android:id="@+id/main_frame_layout">
 
     <FrameLayout
-        android:id="@+id/container"
+        android:id="@+id/container_homescreen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_navigation"/>
