--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/powder">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -157,7 +158,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="12dp"
-        android:layout_marginBottom="56dp"
         android:backgroundTint="@color/green"
         android:shadowColor="#000000"
         android:shadowDx="2"
