--- a/app/src/main/res/layout/fragment_home_chatt.xml
+++ b/app/src/main/res/layout/fragment_home_chatt.xml
@@ -22,10 +22,10 @@
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
-            android:layout_marginLeft="12dp"
-            android:layout_marginBottom="9dp"
-            android:hint="   Search groups by name"
-            android:drawableLeft="@drawable/search_icon"
+            android:layout_marginHorizontal="0dp"
+            android:layout_marginBottom="8dp"
+            android:hint="   Search for chats"
+            android:drawableStart="@drawable/search_icon"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:maxLines="1"
