--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -40,9 +40,10 @@
 
     <ImageView
         android:id="@+id/imageview_registerLogo"
-        android:layout_width="404dp"
-        android:layout_height="411dp"
+        android:layout_width="388dp"
+        android:layout_height="331dp"
         android:layout_marginTop="4dp"
+        android:contentDescription="title"
         android:src="@drawable/neighbors_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +75,6 @@
         android:inputType="textPassword"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_registerName" />
 
@@ -82,7 +82,7 @@
         android:id="@+id/editText_registerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:drawableStart="@drawable/mail_icon"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -90,7 +90,6 @@
         android:inputType="text"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageview_registerLogo" />
 
