updated chat ui

--- a/app/src/main/res/drawable/received_message_bg.xml
+++ b/app/src/main/res/drawable/received_message_bg.xml
@@ -1,7 +1,7 @@
 <!-- received_message_bg.xml -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F0F00B"/>
+    <solid android:color="@color/light_green"/>
     <corners android:radius="19dp"/>
     <padding
         android:left="10dp"
