--- a/app/src/main/res/layout/fragment_home_chatt.xml
+++ b/app/src/main/res/layout/fragment_home_chatt.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="8dp"
-        android:layout_marginBottom="9dp">
+        android:padding="8dp">
 
         <!-- EditText for Search -->
 
