--- a/app/src/main/res/layout/item_group_chatt.xml
+++ b/app/src/main/res/layout/item_group_chatt.xml
@@ -15,6 +15,7 @@
         android:drawablePadding="15dp"
         android:layout_weight="1"
         android:padding="16dp"
+        android:fontFamily="casual"
         android:text="@string/group_name"
         android:textColor="@color/black"
         android:textSize="16sp"
